@@ -1,5 +1,5 @@
 <?xml version="1.0"?>
-<?define ProductVersion = "3.8.4"?>
+<?define ProductVersion = "3.8.5"?>
 
 <!-- default nomacs -->
 <?define ProductUpgradeCode = "08a898f6-d3c5-4869-9d27-91be685c9ae7"?>
